tests/error/string_literal_clear.vow
// TEST: error-code RegionLiteralMutation
module StringLiteralClear

fn main() -> i32 [io] {
    let s: String = "x";
    s.clear();
    0
}
